# gemma3-270M-impl

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
gemma3_text270m/: __init__.py  attention.py  block.py  config.py  generate.py  hf_loader.py  kvcache.py  mlp.py  model.py  tokenizer.py
tests/: __init__.py  test_attention.py  test_block.py  test_config.py  test_generate.py  test_hf_loader.py  test_kvcache.py  test_mlp.py  test_model.py  test_tokenizer.py
